# cocbo-glpk

./: CMakeLists.txt  README.md  cocbo.cpp  cocbo.h  main.cpp
